--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
+<header>
+    <img src="assets/tech_it_easy.png" alt="logo" width="300px" id="logo">
+
+    <nav id="nav">
+        <ul>
+            <li> <a href="#home">Home</a></li>
+            <li> <a href="#Products">Products</a></li>
+            <li> <a href="#">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<div id="container">
+    <div id="stock1">
+        <h2>Tv's in stock</h2>
+        <div class="box">
+            <h3 id="numberToSell">0</h3>
+        </div>
+    </div>
+    <div id="stock2">
+        <h2>Revenue Target</h2>
+        <div class="box">
+            <h3 id="revenue">0</h3>
+        </div>
+    </div>
+    <div id="stock3">
+        <h2>Sold</h2>
+        <div class="box">
+            <h3 id="sold">0</h3>
+        </div>
+    </div>
+</div>
+<div id="items">
+    <ul id="list">
+    </ul>
+</div>
 <script src="main.js"></script>
 </body>
 </html>
